verticcal overflow fixed?

--- a/style.css
+++ b/style.css
@@ -6,13 +6,14 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height: 100%;
+    /* height: 100%; */
     min-height: 100vh;
-    width: 100%;
+    /* width: 100%; */
     overflow: auto; /* Allow scrolling */
     position: relative;
     flex-direction: column;
     overflow-x: hidden; /* Prevent horizontal overflow */
+    overflow-y: auto; /* Allow vertical scrolling */
 }
 
 .container {
